# os-app

./: .bandit  .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  CONTRIBUTING.md  COOKIE_POLICY.md  DEPLOYMENT.md  LINUX_INSTALLATION.md  NOTIFICATION_SYSTEM.md  PORTABILITY.md  README.md  TODO.md  app.py  deploy.sh  env.example  gunicorn.conf.py  install.sh  orion-sphere-lrp.service  pull_request_template.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_dark_mode.py  test_pack.py  wsgi.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: branch-protection.yml  ci.yml  delete-branch.yml  deploy.yml  initial-setup.yml  pr-check.yml  release.yml  setup-branch-protection.yml
config/: __init__.py
data/: bip39_verse.txt
data/ssl/: cert.pem  key.pem
migrations/versions/: 20240613_make_current_stage_nullable.py  464f5fdf68a5_add_user_id_and_child_name_to_.py  add_dark_mode_column_if_missing.py  add_new_character_audit_actions.py  add_notify_message_responded_column.py  add_pack_data_to_group.py  b4a1290dd816_merge_migration_conflicts.py  d09a1b96022b_fix_partial_migration_handle_existing_.py  (+5 more)
models/: __init__.py  character.py  decorators.py  downtime.py  enums.py  event.py  extensions.py  group.py  message.py  print_template.py  research.py  role.py  sample.py  user.py  wiki.py
routes/: auth.py  banking.py  character_skills.py  characters.py  downtime.py  events.py  groups.py  messages.py  research.py  samples.py  settings.py  templates.py  tickets.py  user_management.py  wiki.py
scripts/: fix_linting.py  fix_pack_data.py  format_conftest.py  populate_default_data.py  run_wsl_setup.py  setup_dev.py  setup_dev_environment.py  setup_production_server.py  start_wsl_app.py  test_wsl_setup.py  verify_ci_setup.py
templates/: _template.html  test_cookie_consent.html  test_page.html
tests/: conftest.py  test_app.py  test_cookie_consent.py  test_database_init.py  test_decorators.py  test_migrations.py
utils/: __init__.py  database_init.py  decorators.py  email.py  mask_email.py  migrate_existing_db.py  print_layout.py
(+345 files in other folders)
